--- a/files/style/style.css
+++ b/files/style/style.css
@@ -8,48 +8,58 @@
 :root {
    --indent:   15px;
    --reg-size: 1.15em;
-   --h2-size:  1.35em;
+   --heading-size: 1.35em;
 
    --nav-size: 1.25em;
-   --width:    110ch;
 }
 
 body {
-   font-family: "Pragmasevka";
+   font-family: "Pragmasevka", monospace;
    background-color: var(--colour1);
    color: var(--colour3);
-   max-width: var(--width);
+   max-width: 110ch;
 
    margin: 1em auto;
 }
 
+h1 {
+   font-size: var(--heading-size);
+   padding-bottom: 0.5rem;
+   margin: 0.75rem 0;
+   border-bottom: 2px solid var(--colour3);
+}
+
 h2 {
-   padding-left: 0;
    padding-top: 10px;
    margin-bottom: 2px;
    margin-top: 10px;
-   font-size: var(--h2-size);
+   font-size: var(--heading-size);
 }
 
 p {
    font-size: var(--reg-size);
-   margin-top: 8px;
-   margin-bottom: 12px;
-   margin-left: var(--indent);
+   margin: 8px 0 12px var(--indent);
    padding-left: 1rem;
 }
 
+a {
+   text-decoration: none;
+   font-weight: bold;
+   color: var(--colour6);
+
+   border-bottom: 1px dashed transparent;
+   transition: border-color 0.2s ease;
+}
+
+a:hover {
+   border-color: var(--colour6);
+}
 
 
 /* colours */
 i { color: var(--colour12); }
 b { color: var(--colour10); }
 s { color: var(--colour2); }
-c {
-   border-radius: 3px;
-   padding: 2px;
-   background-color: var(--colour0);
-}
 
 code {
    display: flex;
@@ -63,12 +73,11 @@ code > pre {
    background-color: var(--colour0);
 
    padding: 1rem;
-   margin: 0.5rem;
+   margin: 0.25rem 0.5rem;
 
    border-radius: 0.75em;
    box-shadow: 0.25em 0.15em 1.25em -0.25em var(--colour0);
 }
-
 
 
 /* classes */
@@ -77,32 +86,20 @@ code > pre {
 }
 
 .block p {
-   margin: 0;
-   margin-left: var(--indent);
-   margin-bottom: 5px;
-}
-
-.box {
-   display: inline-flex;
-   align-items: center;
-   padding: 0.65rem 1rem;
-   max-width: 90%;
-   border: 1px solid var(--colour6);
-   transition: background-color 0.2s ease;
-   transition: border-color 0.2s ease;
-}
-
-.box:hover {
-   background-color: var(--colour0);
-   border-color: var(--colour6);
+   margin: 0 0 5px var(--indent);
 }
 
 .quote {
-   margin-top: 10px;
-   margin-bottom: 15px;
-   padding-left: 7px;
-   margin-left: 3px;
-   border-left: 1px solid var(--colour3);
+   padding: 2px 0 2px 1rem;
+   margin-left: calc(var(--indent) + 1rem);
+   margin-bottom: 4px;
+
+   border-left: 2px solid var(--colour3);
+}
+
+.quote p {
+   margin: 0;
+   padding: 0;
 }
 
 .footer {
@@ -190,20 +187,4 @@ code > pre {
 
 .dropdown:hover .dropdown-content {
    display: block;
-}
-
-
-
-/* misc */
-a {
-   text-decoration: none;
-   font-weight: bold;
-   color: var(--colour6);
-
-   border-bottom: 1px dashed transparent;
-   transition: border-color 0.2s ease;
-}
-
-a:hover {
-   border-color: var(--colour6);
 }
